[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bloom-dnabert"
version = "2.0.0"
description = "Bloom filters + DNABERT-2 for DNA variant analysis with optional BGPCA cross-attention"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "BloomDNABert contributors" }]
keywords = ["bioinformatics", "dnabert", "bloom-filter", "variants", "clinvar"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "torch>=2.0.0,<3.0.0",
  "transformers>=4.30.0,<5.0.0",
  "accelerate>=0.20.0,<1.0.0",
  "einops>=0.7.0,<1.0.0",
  "numpy>=2.0.0,<3.0.0",
  "pybloom-live>=3.1.0,<5.0.0",
  "plotly>=5.0.0,<6.0.0",
  "gradio>=4.0.0,<5.0.0",
  "fastapi>=0.115.0,<0.116.0",
  "starlette>=0.40.0,<0.46.0",
  "pandas>=2.0.0,<3.1.0",
  "scikit-learn>=1.3.0,<2.0.0",
  "requests>=2.28.0,<3.0.0",
  "pyfaidx>=0.8.0,<1.0.0",
  "audioop-lts>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bloom_dnabert*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
